--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+/* body section */
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
 
+/* all product section */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -12,6 +14,7 @@ body {
   justify-content: center;
 }
 
+/* single product start */
 .single-product {
   padding: 10px;
   transition: 0.2s;
@@ -29,7 +32,9 @@ body {
   width: 150px;
   height: 150px;
 }
+/* single product end */
 
+/* my-cart section */
 .cart {
   width: 350px;
   padding: 10px;
@@ -37,6 +42,7 @@ body {
   border-radius: 5px;
 }
 
+/* media query start */
 @media only screen and (max-width: 1100px) {
   #all-products {
     display: grid;
@@ -57,6 +63,7 @@ body {
 
   .cart {
     width: 350px;
-    margin: 10px auto;
+    margin: 5px auto 15px auto;
   }
 }
+/* media query end */
