--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,18 @@
   box-shadow: 1px 3px 20px #dfe6e9, 1px 3px 10px #dfe6e9;
   border-radius: 5px;
   background-color: white;
+  position: fixed;
 }
 
 /* media query start */
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1000px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 
   .cart {
-    width: 280px;
+    width: 270px;
   }
 }
 
@@ -68,8 +69,15 @@
   }
 
   .cart {
-    width: 350px;
+    width: 330px;
     margin: 5px auto 15px auto;
+  }
+}
+
+
+@media only screen and (max-width: 580px) {
+  .cart {
+    position: static;
   }
 }
 /* media query end */
